@@ -1,55 +1,53 @@
 package club.ttg.dnd5.domain.feat.service;
 
 import club.ttg.dnd5.domain.book.service.BookService;
+import club.ttg.dnd5.domain.common.rest.dto.PageResponse;
+import club.ttg.dnd5.domain.common.rest.dto.Pagination;
 import club.ttg.dnd5.domain.feat.rest.dto.FeatDetailResponse;
 import club.ttg.dnd5.domain.feat.rest.dto.FeatRequest;
 import club.ttg.dnd5.domain.feat.rest.dto.FeatShortResponse;
 import club.ttg.dnd5.domain.feat.rest.mapper.FeatMapper;
+import club.ttg.dnd5.domain.filter.model.SearchBody;
 import club.ttg.dnd5.exception.EntityExistException;
 import club.ttg.dnd5.exception.EntityNotFoundException;
 import club.ttg.dnd5.domain.feat.model.Feat;
 import club.ttg.dnd5.domain.feat.repository.FeatRepository;
-import club.ttg.dnd5.util.SwitchLayoutUtils;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Size;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.data.domain.Sort;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.stereotype.Service;
-
-import java.util.Collection;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class FeatServiceImpl implements FeatService {
-    private static final Sort DEFAULT_SORT = Sort.by("category", "name");
+    private final FeatQueryDslSearchService featQueryDslSearchService;
     private final FeatRepository featRepository;
     private final BookService bookService;
     private final FeatMapper featMapper;
 
     @Override
     public FeatDetailResponse getFeat(final String featUrl) {
-        return featMapper.toDetailDto(findByUrl(featUrl));
+        return featMapper.toDetail(findByUrl(featUrl));
     }
 
     @Override
-    public Collection<FeatShortResponse> getFeats(final @Valid @Size String searchLine) {
-        return Optional.ofNullable(searchLine)
-                .filter(StringUtils::isNotBlank)
-                .map(String::trim)
-                .map(line -> {
-                    String invertedSearchLine = SwitchLayoutUtils.switchLayout(line);
-                    return featRepository.findBySearchLine(line, invertedSearchLine, DEFAULT_SORT);
-                })
-                .orElseGet(() -> featRepository.findAll(DEFAULT_SORT))
+    public PageResponse<FeatShortResponse> getFeats(final @Valid @Size String searchLine,
+                                                    final int page,
+                                                    final int limit,
+                                                    final String sort, final SearchBody searchBody) {
+        var responseItems = featQueryDslSearchService.search(
+                        searchLine, page, limit, sort, searchBody)
                 .stream()
-                .map(featMapper::toShortDto)
-                .collect(Collectors.toList());
+                .map(featMapper::toShort)
+                .toList();
+        var pagination = Pagination.of(page, limit, featRepository.count(), responseItems.size());
+        return PageResponse.<FeatShortResponse>builder()
+                .items(responseItems)
+                .pagination(pagination)
+                .build();
     }
 
     @Secured("ADMIN")
@@ -69,7 +67,7 @@ public class FeatServiceImpl implements FeatService {
     @Transactional
     @Override
     public String updateFeat(final String featUrl, final FeatRequest dto) {
-        var entity = findByUrl(featUrl);
+        findByUrl(featUrl);
         if (!featUrl.equalsIgnoreCase(dto.getUrl())) {
             featRepository.deleteById(featUrl);
         }
