@@ -2,6 +2,8 @@ package club.ttg.dnd5.domain.glossary.service;
 
 import club.ttg.dnd5.domain.book.model.Book;
 import club.ttg.dnd5.domain.book.service.BookService;
+import club.ttg.dnd5.domain.common.rest.dto.PageResponse;
+import club.ttg.dnd5.domain.common.rest.dto.Pagination;
 import club.ttg.dnd5.domain.common.rest.dto.SourceRequest;
 import club.ttg.dnd5.domain.filter.model.SearchBody;
 import club.ttg.dnd5.domain.glossary.model.Glossary;
@@ -10,19 +12,14 @@ import club.ttg.dnd5.domain.glossary.rest.dto.GlossaryDetailedResponse;
 import club.ttg.dnd5.domain.glossary.rest.dto.GlossaryShortResponse;
 import club.ttg.dnd5.domain.glossary.rest.dto.create.GlossaryRequest;
 import club.ttg.dnd5.domain.glossary.rest.mapper.GlossaryMapper;
-import club.ttg.dnd5.domain.spell.rest.dto.SpellShortResponse;
 import club.ttg.dnd5.exception.EntityExistException;
 import club.ttg.dnd5.exception.EntityNotFoundException;
-import club.ttg.dnd5.util.SwitchLayoutUtils;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import java.util.List;
+
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,10 +32,21 @@ public class GlossaryService {
 
     private final GlossaryQueryDslSearchService glossaryQueryDslSearchService;
 
-    public List<GlossaryShortResponse> search(String searchLine, SearchBody searchBody) {
-        return glossaryQueryDslSearchService.search(searchLine, searchBody).stream()
+    public PageResponse<GlossaryShortResponse> search(String searchLine,
+                                                      int page,
+                                                      int limit,
+                                                      String sort,
+                                                      SearchBody searchBody) {
+        var responseItems = glossaryQueryDslSearchService.search(
+                        searchLine, page, limit, sort, searchBody)
+                .stream()
                 .map(glossaryMapper::toShort)
-                .collect(Collectors.toList());
+                .toList();
+        var pagination = Pagination.of(page, limit, glossaryRepository.count(), responseItems.size());
+        return PageResponse.<GlossaryShortResponse>builder()
+                .items(responseItems)
+                .pagination(pagination)
+                .build();
     }
 
     @Transactional
